--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "autoprefixer": "^10.4.14",
+    "date-fns": "^2.29.3",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.3.1",
     "langchain": "^0.0.64",
