--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.16.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
@@ -19,6 +20,7 @@
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.3.1",
     "langchain": "^0.0.64",
+    "lodash": "^4.17.21",
     "next": "^13.3.1",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
