🐛 fix: docker build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    ports:
+      - '3000:3000'
 
   signal:
     container_name: signal_api
