--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "next dev",
     "build": "next build",
+    "serve": "next start",
     "lint": "next lint"
   },
   "dependencies": {
