🐛 fix: host not found when running from compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - NETWORK_HOST=signal_api
     ports:
       - '3000:3000'
 
